docs: the Kotlin migration notes, round by round
Findings and final conclusions of the conversion rounds: S3 and the
nullability cluster, the invokeExact trap, the dependency sweep and its REPL
discoveries, the medium runtime classes, C interop and the planned
post-parity !! cleanup, the long-tail rounds, the autosplitter and eval
return value, the Ops conversion, and the org.raku.rakudo layer.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>